k8s-demo/apps/backend/overlays/prod/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: utterai-api-ingress
  annotations:
    alb.ingress.kubernetes.io/group.name: utterai-prod
    # TODO: prod ACM 인증서 ARN으로 교체합니다.
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:000000000000:certificate/TODO_PROD
spec:
  rules:
    - host: api.utterai.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: utterai-api-service
                port:
                  number: 8080
